fix spacing problem inbetween each picture

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,10 +13,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  border: 0.5px solid lightgray;
   width: 601px;
   margin-top: 10%;
-  background-color: white;
   height: 100%;
 }
 
@@ -230,8 +228,9 @@ input {
   flex-direction: row;
   justify-content: space-between;
   position: fixed;
-
+  border: 1px solid lightgray;
   height: 77px;
+  background-color: white;
   width: 100%;
 }
 
@@ -275,4 +274,10 @@ input {
   background-color: #ededed;
   height: 30px;
   font-size: 13px;
+}
+
+.space {
+  border: 0.5px solid lightgray;
+  margin-top: 40px;
+  background-color: white;
 }
